--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,7 @@ stages:
     - virtualenv venv
     - source venv/bin/activate
     - pip install -r requirements.txt
-    - export MYPYPATH=$(pwd)/venv/lib/site-packages
-    - echo $(MYPYPATH)
+    - export MYPYPATH=$PWD/venv/lib/python3.7/site-packages/
   
 backend-type-check:
   <<: *backend_definition
