--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
+    "@mdi/light-font": "^0.2.63",
     "buefy": "^0.8.4",
+    "bulma-helpers": "^0.3.8",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-i18n": "^8.14.1",
