--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -7,6 +7,8 @@ services:
       POSTGRES_USER: jdisctf
       POSTGRES_PASSWORD: jdisctf
       POSTGRES_DB: jdisctf_db
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
   
