--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.10",
     "vue-i18n": "^8.14.1",
     "vue-router": "^3.0.3",
+    "vue2-animate": "^2.1.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
