Added db seeding command with event data
# Conflicts:
#	backend/JDISCTF/api/challenges.py

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ backend-lint:
   <<: *backend_definition
   stage: backend-lint
   script:
-    - pylint JDISCTF
+    - pylint JDISCTF seeds
   
 backend-test:
   <<: *backend_definition
