--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/light-font": "^0.2.63",
+    "axios": "^0.19.0",
     "buefy": "^0.8.4",
     "bulma-helpers": "^0.3.8",
     "core-js": "^2.6.5",
@@ -29,6 +30,7 @@
     "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
     "vue-cli-plugin-i18n": "^0.6.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "axios-curlirize": "^1.3.3"
   }
 }
