--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,7 @@
-FLASK_APP=main.py
+FLASK_SECRET_KEY=CHANGEMEEE
+FLASK_APP=jdisctf
 FLASK_ENV=development
+FLASK_SERVER_NAME=0.0.0.0:5000
 POSTGRES_URL="127.0.0.1:5432"
 POSTGRES_USER="jdisctf"
 POSTGRES_PW="jdisctf"
