--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -10,16 +10,16 @@
   },
   "dependencies": {
     "@mdi/light-font": "^0.2.63",
-    "@types/vue-markdown": "^2.2.1",
+    "@types/marked": "^0.7.2",
     "axios": "^0.19.0",
     "babel-runtime": "^6.26.0",
     "buefy": "^0.8.4",
     "bulma-helpers": "^0.3.8",
     "core-js": "^2.6.5",
+    "marked": "^0.7.0",
     "typescript-tslint-plugin": "^0.5.4",
     "vue": "^2.6.10",
     "vue-i18n": "^8.14.1",
-    "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.3",
     "vue2-animate": "^2.1.2",
     "vuex": "^3.0.1"
