--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - working-directory: frontend/user
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install and build
+      working-directory: ./frontend/user
       run: |
         npm ci
         npm run build --if-present
