--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,25 +15,10 @@ jobs:
     - uses: actions/checkout@v1
       
     - name: Build Backend
-      run: docker build ./backend --tag my-image-name:$(date +%s)
-      
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+      run: docker build ./backend
 
-    - name: npm install and build USER
-      working-directory: ./frontend/user
-      run: |
-        npm ci
-        npm run build --if-present
-      env:
-        CI: true
-
-    - name: npm install and build ADMIN
-      working-directory: ./frontend/admin
-      run: |
-        npm ci
-        npm run build --if-present
-      env:
-        CI: true
+    - name: Build Frontend USER
+      run: docker build ./frontend/user
+    
+    - name: Build Frontend ADMIN
+      run: docker build ./frontend/admin
