--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,7 @@ jobs:
 
     - name: Lint Frontend USER
       working-directory: ./frontend/user
-      run: |
-        pwd
+      run: pwd
       env:
         CI: true
 
