--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - uses: actions/checkout@v1
     - name: Use Node.js 12.x
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
 
     - name: Lint Frontend USER
-      working-directory: "frontend/user"
-      run: pwd
+      working-directory: ./frontend/user
+      run: |
+        npm ci
+        npm run lint
       env:
         CI: true
 
