--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Install wheel
       run: sudo pip3 install wheel
     - name: Install requirements
-      run: pip3 install -r requirements.txt
+      run: sudo pip3 install -r requirements.txt
 
     - name: Lint backend
       working-directory: ./backend
