--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
     - name: Install wheel
       run: sudo pip3 install wheel
     - name: Install requirements
+      working-directory: ./backend
       run: sudo pip3 install -r requirements.txt
 
     - name: Lint backend
