--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,10 +34,10 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: Install setuptools
-      run: sudo apt install python3-setuptools
-    - name: Install wheel
-      run: sudo pip3 install wheel
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.7' # Version range or exact version of a Python version to use, using semvers version range syntax.
+        architecture: 'x64' 
     - name: Install requirements
       working-directory: ./backend
       run: sudo pip3 install -r requirements.txt
