--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,9 @@ jobs:
       with:
         python-version: '3.7' # Version range or exact version of a Python version to use, using semvers version range syntax.
         architecture: 'x64' 
+    
+    - name: Install requirements
+      run: sudo apt install python3-setuptools
     - name: Install requirements
       working-directory: ./backend
       run: sudo pip3 install -r requirements.txt
