--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,13 @@ jobs:
       with:
         python-version: '3.7' # Version range or exact version of a Python version to use, using semvers version range syntax.
         architecture: 'x64' 
+        
+    - name: test
+      run: python3 --version
+    - name: test2
+      run: python --version
     
-    - name: Install requirements
+    - name: Install setuptools
       run: sudo apt install python3-setuptools
     - name: Install requirements
       working-directory: ./backend
