--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
       run: sudo apt install python3-setuptools
     - name: Install requirements
       working-directory: ./backend
-      run: pip install -r requirements.txt --user
+      run: pip install -r requirements.txt
 
     - name: Lint backend
       working-directory: ./backend
