--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jdis-admin",
-  "version": "0.1.0",
-  "private": true,
+  "name": "flaggr-admin",
+  "version": "0.2.0",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service lint --fix && vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,28 +9,34 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "buefy": "^0.8.6",
-    "core-js": "^3.3.2",
-    "typescript-tslint-plugin": "^0.5.4",
-    "vue": "^2.6.10",
-    "vue-i18n": "^8.15.0",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.0.1"
+    "@mdi/light-font": "^0.2",
+    "@types/marked": "^0.7",
+    "axios": "^0.19",
+    "babel-runtime": "^6.26",
+    "buefy": "^0.8",
+    "bulma-helpers": "^0.3",
+    "core-js": "^3.3",
+    "marked": "^0.7",
+    "typescript-tslint-plugin": "^0.5",
+    "vue": "^2.6",
+    "vue-i18n": "^8.15",
+    "vue-router": "^3.1",
+    "vue2-animate": "^2.1",
+    "vuex": "^3.0"
   },
   "devDependencies": {
-    "@kazupon/vue-i18n-loader": "^0.3.0",
-    "@types/webpack": "^4.4.0",
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-router": "^4.0.0",
-    "@vue/cli-plugin-typescript": "^4.0.0",
-    "@vue/cli-plugin-vuex": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
-    "axios-curlirize": "^1.3.4",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
-    "typescript": "~3.5.3",
-    "vue-cli-plugin-i18n": "^0.6.0",
-    "vue-template-compiler": "^2.6.10"
+    "@types/webpack": "^4.4",
+    "@vue/cli-plugin-babel": "^4.1",
+    "@vue/cli-plugin-typescript": "^4.1",
+    "@vue/cli-service": "^4.1",
+    "node-sass": "^4.12",
+    "sass-loader": "^8.0",
+    "typescript": "^3.5",
+    "vue-cli-plugin-i18n": "^0.6",
+    "vue-template-compiler": "^2.6",
+    "axios-curlirize": "^1.3",
+    "@kazupon/vue-i18n-loader": "^0.3",
+    "@vue/cli-plugin-router": "^4.0",
+    "@vue/cli-plugin-vuex": "^4.0"
   }
 }
