--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jdis",
-  "version": "0.1.0",
-  "private": true,
+  "name": "flaggr-user",
+  "version": "0.2.0",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service lint --fix && vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,31 +9,31 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
-    "@mdi/light-font": "^0.2.63",
-    "@types/marked": "^0.7.2",
-    "axios": "^0.19.0",
-    "babel-runtime": "^6.26.0",
-    "buefy": "^0.8.4",
-    "bulma-helpers": "^0.3.8",
-    "core-js": "^2.6.5",
-    "marked": "^0.7.0",
-    "typescript-tslint-plugin": "^0.5.4",
-    "vue": "^2.6.10",
-    "vue-i18n": "^8.14.1",
-    "vue-router": "^3.0.3",
-    "vue2-animate": "^2.1.2",
-    "vuex": "^3.0.1"
+    "@mdi/light-font": "^0.2",
+    "@types/marked": "^0.7",
+    "axios": "^0.19",
+    "babel-runtime": "^6.26",
+    "buefy": "^0.8",
+    "bulma-helpers": "^0.3",
+    "core-js": "^3.5",
+    "marked": "^0.7",
+    "typescript-tslint-plugin": "^0.5",
+    "vue": "^2.6",
+    "vue-i18n": "^8.14",
+    "vue-router": "^3.0",
+    "vue2-animate": "^2.1",
+    "vuex": "^3.0"
   },
   "devDependencies": {
-    "@types/webpack": "^4.4.0",
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-typescript": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0",
-    "typescript": "^3.4.3",
-    "vue-cli-plugin-i18n": "^0.6.0",
-    "vue-template-compiler": "^2.6.10",
-    "axios-curlirize": "^1.3.3"
+    "@types/webpack": "^4.4",
+    "@vue/cli-plugin-babel": "^4.1",
+    "@vue/cli-plugin-typescript": "^4.1",
+    "@vue/cli-service": "^4.1",
+    "node-sass": "^4.9",
+    "sass-loader": "^7.1",
+    "typescript": "^3.4",
+    "vue-cli-plugin-i18n": "^0.6",
+    "vue-template-compiler": "^2.6",
+    "axios-curlirize": "^1.3"
   }
 }
