--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
       working-directory: ./backend
       run: pytest
 
-  build:
+  build-backend:
 
     runs-on: ubuntu-latest
 
@@ -68,8 +68,22 @@ jobs:
     - name: Build Backend
       run: docker build ./backend
 
+  build-frontend-user:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+
     - name: Build Frontend USER
       run: docker build ./frontend/user
     
+  build-frontend-admin:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+
     - name: Build Frontend ADMIN
       run: docker build ./frontend/admin
