Remove nginx from frontend Dockerfiles
This optimization removes the need for a proxy for both frontend parts (user & admin). Since frontend is only static files, they are builded on separate Docker images (frontend-user & frontend-admin) and their assets are then copied in the nginx image.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,16 +13,13 @@ services:
       - "5432:5432"
     restart: always
 
-  nginx:
-    build: ./nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    restart: always
-    depends_on:
-      - frontend-user
-      - frontend-admin
-      - backend
+  frontend-user:
+    build: ./frontend/user
+    image: frontend-user
+
+  frontend-admin:
+    build: ./frontend/admin
+    image: frontend-admin
 
   backend:
     build: ./backend
@@ -30,10 +27,13 @@ services:
     depends_on:
       - db
 
-  frontend-user:
-    build: ./frontend/user
-    restart: always
-
-  frontend-admin:
-    build: ./frontend/admin
+  nginx:
+    build: ./nginx
+    depends_on:
+      - backend
+      - frontend-user
+      - frontend-admin
+    ports:
+      - "80:80"
+      - "443:443"
     restart: always
