--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,53 +1,28 @@
-worker_processes 1;
+user  nginx;
+worker_processes  1;
 
-events { worker_connections 1024; }
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
+
+events {
+    worker_connections  1024;
+}
 
 http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    sendfile on;
+    sendfile        off;
 
-    upstream docker-frontend-user {
-        server frontend-user:80;
-    }
+    keepalive_timeout  60;
 
-    upstream docker-frontend-admin {
-        server frontend-admin:80;
-    }
+    gzip  on;
 
     upstream docker-backend {
         server backend:8080;
     }
 
-    server {
-        listen 80;
-
-        location / {
-            proxy_pass         http://docker-frontend-user;
-            proxy_redirect     off;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
-
-        location /admin {
-            rewrite /admin/?(.*) /$1  break;
-            proxy_pass         http://docker-frontend-admin;
-            proxy_redirect     off;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
-
-        location /api {
-            proxy_pass         http://docker-backend;
-            proxy_redirect     off;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
-    }
+    include /etc/nginx/conf.d/*.conf;
 
 }
