--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,11 +1,12 @@
 FROM nginx:stable-alpine
-RUN mkdir -p /var/log/nginx
+RUN apk add certbot gettext
 RUN mkdir -p /var/www/html
 COPY --from=frontend-user /app/dist /var/www/html
 COPY --from=frontend-admin /app/dist /var/www/html/admin
-COPY nginx.conf /etc/nginx/nginx.conf
-COPY default.conf /etc/nginx/conf.d/default.conf
-RUN chown nginx:nginx /var/www/html
+COPY nginx.conf /etc/nginx/nginx-template.conf
+COPY nginx-http.conf /etc/nginx/nginx-http.conf
+COPY run.sh /
+RUN chmod +x /run.sh
 EXPOSE 80
 EXPOSE 443
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["/bin/sh", "/run.sh"]
