--- a/nginx/nginx-http.conf
+++ b/nginx/nginx-http.conf
@@ -1,4 +1,29 @@
-server {
+user  nginx;
+worker_processes  1;
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
+
+events {
+    worker_connections  1024;
+}
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        off;
+
+    keepalive_timeout  60;
+
+    gzip  on;
+
+    upstream docker-backend {
+        server backend:8080;
+    }
+
+    server {
 
   location / {
       root /var/www/html;
@@ -13,4 +38,6 @@ server {
       proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header   X-Forwarded-Host $server_name;
   }
+}
+
 }
