fix bug where reloading admin page would use wrong static files from nginx

--- a/nginx/nginx-http.conf
+++ b/nginx/nginx-http.conf
@@ -25,8 +25,21 @@ http {
 
     server {
 
+  location /admin {
+      alias /var/www/html/admin;
+      index index.html;
+      try_files $uri $uri/ /index.html;
+  }
+
+  location /admin/ {
+      alias /var/www/html/admin;
+      index index.html;
+      try_files /index.html $uri $uri/;
+  }
+
   location / {
       root /var/www/html;
+      index index.html;
       try_files $uri $uri/ /index.html;
   }
 
