--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,9 @@ jobs:
       run: sudo apt install python3-setuptools
     - name: Install requirements
       working-directory: ./backend
-      run: pip install -r requirements.txt
+      run: |
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
 
     - name: Lint backend
       working-directory: ./backend
