--- a/backend/.env.production
+++ b/backend/.env.production
@@ -2,8 +2,8 @@ FLASK_SECRET_KEY=CHANGEMEEE
 FLASK_APP=jdisctf
 FLASK_ENV=production
 FLASK_SERVER_NAME=0.0.0.0:8080
-POSTGRES_URL="db:5432"
-POSTGRES_USER="jdisctf"
-POSTGRES_PW="jdisctf"
-POSTGRES_DB="jdisctf_db"
+POSTGRES_URL=db:5432
+POSTGRES_USER=jdisctf
+POSTGRES_PW=jdisctf
+POSTGRES_DB=jdisctf_db
 PYTHONUNBUFFERED=TRUE
