--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_DB: jdisctf_db
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
-    restart: always
+    restart: on-failure
 
   frontend-user:
     build: ./frontend/user
@@ -22,6 +22,9 @@ services:
   backend:
     build: ./backend
     restart: always
+    env_file: 
+      - ./backend/.env.production
+    restart: on-failure
     depends_on:
       - db
 
@@ -43,4 +46,4 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    restart: always
+    restart: on-failure
