--- a/nginx/nginx-http.conf
+++ b/nginx/nginx-http.conf
@@ -25,32 +25,26 @@ http {
 
     server {
 
-  location /admin {
-      alias /var/www/html/admin;
-      index index.html;
-      try_files $uri $uri/ /index.html;
-  }
+        location /admin {
+            alias /var/www/html/admin;
+            index index.html;
+            try_files $uri $uri/ /admin/index.html;
+        }
 
-  location /admin/ {
-      alias /var/www/html/admin;
-      index index.html;
-      try_files /index.html $uri $uri/;
-  }
+        location / {
+            root /var/www/html;
+            index index.html;
+            try_files $uri $uri/ /index.html;
+        }
 
-  location / {
-      root /var/www/html;
-      index index.html;
-      try_files $uri $uri/ /index.html;
-  }
-
-  location /api {
-      proxy_pass         http://docker-backend;
-      proxy_redirect     off;
-      proxy_set_header   Host $host;
-      proxy_set_header   X-Real-IP $remote_addr;
-      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Host $server_name;
-  }
+        location /api {
+            proxy_pass         http://docker-backend;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
 }
 
 }
