fix admin reload page for https users too

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -63,6 +63,11 @@ http {
       # ref: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/X-XSS-Protection
       add_header X-Xss-Protection "1; mode=block" always;
 
+      location /admin {
+          alias /var/www/html/admin;
+          index index.html;
+          try_files $uri $uri/ /admin/index.html;
+      }
 
       location / {
         root /var/www/html;
