add a Content Security Policy to flaggr

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -63,6 +63,15 @@ http {
       # ref: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/X-XSS-Protection
       add_header X-Xss-Protection "1; mode=block" always;
 
+      # with Content Security Policy (CSP) enabled(and a browser that supports it(http://caniuse.com/#feat=contentsecuritypolicy),
+      # you can tell the browser that it can only download content from the domains you explicitly allow
+      # http://www.html5rocks.com/en/tutorials/security/content-security-policy/
+      # https://www.owasp.org/index.php/Content_Security_Policy
+      # I need to change our application code so we can increase security by disabling 'unsafe-inline' 'unsafe-eval'
+      # directives for css and js(if you have inline css or js, you will need to keep it too).
+      # more: http://www.html5rocks.com/en/tutorials/security/content-security-policy/#inline-code-considered-harmful
+      add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://themes.googleusercontent.com; object-src 'none'";
+
       location /admin {
           alias /var/www/html/admin;
           index index.html;
