--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -70,7 +70,7 @@ http {
       # I need to change our application code so we can increase security by disabling 'unsafe-inline' 'unsafe-eval'
       # directives for css and js(if you have inline css or js, you will need to keep it too).
       # more: http://www.html5rocks.com/en/tutorials/security/content-security-policy/#inline-code-considered-harmful
-      add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' ; img-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.materialdesignicons.com; font-src 'self' https://fonts.gstatic.com/; object-src 'none'";
+      add_header Content-Security-Policy "default-src 'self'; script-src 'self'; img-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.materialdesignicons.com; font-src 'self' https://fonts.gstatic.com/; object-src 'none'";
 
       location /admin {
           alias /var/www/html/admin;
